# agentscaffoldcpp

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: pocketflow_cpp-config.cmake.in
docs/: API.md  API_COMPATIBILITY_VALIDATION.md  CODE_REVIEW_OPTIMIZATIONS.md  FINAL_VALIDATION_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md
examples/: CMakeLists.txt  README.md  agent_pattern.cpp  async_processing.cpp  basic_sequential.cpp  batch_processing.cpp
include/pocketflow/: async_batch_flow.hpp  async_batch_node.hpp  async_flow.hpp  async_node.hpp  base_node.hpp  batch_flow.hpp  batch_node.hpp  exceptions.hpp  flow.hpp  node.hpp  pocketflow.hpp
scripts/: run_tests.sh
tests/: CMakeLists.txt  README.md  test_api_compatibility.cpp  test_async_batch_node.cpp  test_async_debug.cpp  test_async_flow.cpp  test_async_node.cpp  test_base_node.cpp  test_batch_flow.cpp  test_batch_node.cpp  test_end_to_end.cpp  test_flow.cpp  test_integration.cpp  test_memory_benchmark.cpp  test_node.cpp  test_performance_benchmark.cpp
